[tool.poetry]
name = "vanet-viz"
version = "0.1.0"
description = "Visualization for VANET Temporal Graphs, focusing on the VeReMi dataset"
authors = ["h8rtv"]
license = "MIT"
readme = "README.md"
packages = [{ include = "vanet_viz" }]

[tool.poetry.dependencies]
python = "^3.10"
raylib = "^4.5.0.1"
pandas = "^2.1.3"

[tool.poetry.scripts]
viz = 'vanet_viz.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
